2010-06-09  Anders Bakken  <agbakken@gmail.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] EditorClientQt.h has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40249

        * WebCoreSupport/EditorClientQt.h:

2010-06-09  Anders Bakken  <agbakken@gmail.com>

        Reviewed by David Levin.

        [Qt] EditCommandQt.cpp/h have coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40248

        * WebCoreSupport/EditCommandQt.cpp:
        (EditCommandQt::EditCommandQt):
        (EditCommandQt::~EditCommandQt):
        (EditCommandQt::redo):
        (EditCommandQt::undo):
        * WebCoreSupport/EditCommandQt.h:

2010-06-09  Anders Bakken  <agbakken@gmail.com>

        Reviewed by David Levin.

        [Qt] DumpRenderTreeSupportQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40247

        * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
        (DumpRenderTreeSupportQt::firstRectForCharacterRange):

2010-06-09  Anders Bakken  <agbakken@gmail.com>

        Reviewed by David Levin.

        [Qt] DragClientQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40246

        * WebCoreSupport/DragClientQt.cpp:
        (WebCore::DragClientQt::startDrag):

2010-06-09  Anders Bakken  <agbakken@gmail.com>

        Reviewed by Laszlo Gombos.

        [Qt] ContextMenuClientQt.h has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40242

        * WebCoreSupport/ContextMenuClientQt.h:

2010-06-09  Anders Bakken  <agbakken@gmail.com>

        Reviewed by David Levin.

        [Qt] ChromeClientQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40240

        * WebCoreSupport/ChromeClientQt.cpp:
        (WebCore::ChromeClientQt::pageRect):
        (WebCore::ChromeClientQt::createWindow):
        (WebCore::ChromeClientQt::runJavaScriptAlert):
        (WebCore::ChromeClientQt::runJavaScriptConfirm):