@@ -1,5 +1,15 @@
 2010-06-09  Anders Bakken  <agbakken@gmail.com>
 
+        Reviewed by David Levin.
+
+        [Qt] FrameLoaderClientQt.h has coding-style errors
+        https://bugs.webkit.org/show_bug.cgi?id=40251
+
+        * WebCoreSupport/FrameLoaderClientQt.h:
+        (WebCore::FrameLoaderClientQt::dispatchWillSendSubmitEvent):
+
+2010-06-09  Anders Bakken  <agbakken@gmail.com>
+
         Reviewed by Kenneth Rohde Christiansen.
 
         [Qt] EditorClientQt.h has coding-style errors
